[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/opening/opening.gd" type="Script" id=1]
[ext_resource path="res://textures/house.jpg" type="Texture" id=2]
[ext_resource path="res://scenes/opening/opening.tres" type="Theme" id=3]

[sub_resource type="Animation" id=1]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("Black:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Opening" type="Node"]
script = ExtResource( 1 )
_next_scene = "res://scenes/minigames/ec2g.tscn"

[node name="Fill" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -672.0
margin_top = -540.0
margin_right = 672.0
margin_bottom = 540.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Black" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 480, 270 )
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Wait" type="Timer" parent="."]
one_shot = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
bus = "Sound"

[node name="Music" type="AudioStreamPlayer" parent="."]
bus = "Music"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.8
anchor_right = 0.95
anchor_bottom = 1.0
margin_top = -62.0
theme = ExtResource( 3 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Title" type="PanelContainer" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 57.0
size_flags_horizontal = 0

[node name="Label" type="Label" parent="VBoxContainer/Title"]
margin_right = 200.0
margin_bottom = 57.0
rect_min_size = Vector2( 200, 0 )
clip_text = true

[node name="Dialogue" type="PanelContainer" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 1728.0
margin_bottom = 278.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="VBoxContainer/Dialogue"]
margin_right = 1728.0
margin_bottom = 201.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="TextTimer" type="Timer" parent="VBoxContainer/Dialogue/Text"]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 1 )

[connection signal="timeout" from="Wait" to="." method="_on_wait_timeout"]
[connection signal="finished" from="Sound" to="." method="_on_sound_finished"]
[connection signal="timeout" from="VBoxContainer/Dialogue/Text/TextTimer" to="." method="_on_text_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
